@@ -123,3 +123,4 @@
 17-Oct-2021  - V1.32 Add local replace() method in FileUtil()
 18-Mar-2022  - V1.33 Update replace() method in FileUtil() to return True when successful
 28-Mar-2022  - V1.34 Resolve pylint issues
+ 6-Jun-2022  - V1.35 Resolve pylint issues in FastaUtil
